; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfgloop.c_cancel_loop_tree.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfgloop.c_cancel_loop_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.loops = type { i32 }
%struct.loop = type { %struct.loop* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cancel_loop_tree(%struct.loops* %0, %struct.loop* %1) #0 {
  %3 = alloca %struct.loops*, align 8
  %4 = alloca %struct.loop*, align 8
  store %struct.loops* %0, %struct.loops** %3, align 8
  store %struct.loop* %1, %struct.loop** %4, align 8
  br label %5

5:                                                ; preds = %10, %2
  %6 = load %struct.loop*, %struct.loop** %4, align 8
  %7 = getelementptr inbounds %struct.loop, %struct.loop* %6, i32 0, i32 0
  %8 = load %struct.loop*, %struct.loop** %7, align 8
  %9 = icmp ne %struct.loop* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %5
  %11 = load %struct.loops*, %struct.loops** %3, align 8
  %12 = load %struct.loop*, %struct.loop** %4, align 8
  %13 = getelementptr inbounds %struct.loop, %struct.loop* %12, i32 0, i32 0
  %14 = load %struct.loop*, %struct.loop** %13, align 8
  call void @cancel_loop_tree(%struct.loops* %11, %struct.loop* %14)
  br label %5

15:                                               ; preds = %5
  %16 = load %struct.loops*, %struct.loops** %3, align 8
  %17 = load %struct.loop*, %struct.loop** %4, align 8
  %18 = call i32 @cancel_loop(%struct.loops* %16, %struct.loop* %17)
  ret void
}

declare dso_local i32 @cancel_loop(%struct.loops*, %struct.loop*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
